# RCS

./: .gitignore  ASCII_Mining_Game.rbxlx  CMakeLists.txt  INTERFACE_GUIDE.md  MiningGameScript.lua  README.md  TECHNICAL_SUMMARY.md  UI_MOCKUP.txt  chess_scanner.py  console_ui.cpp  console_ui.h  create_sample_images.py  demo_chess_scanner.py  macrorecorder.cpp  macrorecorder.h  macrorecorder_console.cpp  macrorecorder_console.h  main.cpp  main_console.cpp  mainwindow.cpp  mainwindow.h  mousecontroller.cpp  mousecontroller.h  mousecontroller_console.cpp  mousecontroller_console.h  requirements.txt  sample_macro.rcs  style.qss  test_chess_scanner.py  test_functionality.sh  test_mining_game.lua  validate_game.py
src/: input_controller.cpp  input_controller.h  main.cpp  muzzle_flash_detector.cpp  muzzle_flash_detector.h  recoil_control.cpp  recoil_control.h  ui_manager.cpp  ui_manager.h  weapon_profiles.cpp  weapon_profiles.h
